[2] searching users, indexes and load testing
